--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--[if lt IE 9]> 
        <script src="assets/js/html5shiv.min.js"></script>
        <script type="text/javascript">
-          alert("현재 당신이 보는 브라우저는 구립니다. 업데이트 해주세요~")
+          alert("현재 당신이 보는 브라우저는 지원이되지 않습니다. 업데이트 해주세요~")
        </script>
     <![endif]-->
 
@@ -232,9 +232,9 @@
                         <p class="col_desc">Slick.js를 이용한 이미지 슬라이드 효과입니다.</p>
                         <!--  slider -->
                         <div class="slider">
-                            <div><img src="assets/img/slider001.jpg" alt="이미지1"></div>
-                            <div><img src="assets/img/slider001.jpg" alt="이미지2"></div>
-                            <div><img src="assets/img/slider001.jpg" alt="이미지3"></div>
+                            <div><img src="assets/img/slider002.jpg" alt="이미지1"></div>
+                            <div><img src="assets/img/slider003.jpg" alt="이미지2"></div>
+                            <div><img src="assets/img/slider004.jpg" alt="이미지3"></div>
                         </div>
                         <!--//slider -->
                     </article>
@@ -263,7 +263,7 @@
                         <p class="col_desc">반응형 영상을 보여주는 영역입니다.</p>
                         <!-- video-->
                         <div class="video">
-                            <iframe src="https://www.youtube.com/embed/fPbr4cs1O0Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/bnVUHWCynig" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <!--// video-->
                     </article>
@@ -289,13 +289,13 @@
                         <!-- side2 -->
                         <div class="side2">
                             <figure class="fi01">
-                                <img src="assets/img/side2.jpg" alt="이미지1"class="im01">
+                                <img src="assets/img/side2.jpg" alt="이미지1" class="im01">
                                 <figcaption> 
                                         Mouse Hover
                                 </figcaption>
                             </figure>
                             <figure class="fi02">
-                                <img src="assets/img/side4.jpg" alt="이미지1"class="im02">
+                                <img src="assets/img/side4.jpg" alt="이미지1" class="im02">
                                 <figcaption> 
                                        Mouse Hover
                                 </figcaption>
